feat(plugins): intégrer CyAnnota aux médias
